# Bouncer

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  comprehensive_error_test.py  demo_error_messages.py  dev.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_all_errors.py  test_error_format.py  test_refactored.py
bouncer/: __init__.py
bouncer/access/: checker.py  friendship.py  inheritance.py
bouncer/core/: enums.py  value_objects.py
bouncer/decorators/: __init__.py  access_decorators.py  base.py  friend_decorator.py
bouncer/descriptors/: __init__.py  base.py  class_method.py  factory.py  property.py  static_method.py
bouncer/exceptions/: access_errors.py
bouncer/inspection/: __init__.py  stack_inspector.py
bouncer/system/: __init__.py  access_control.py  management.py
bouncer/utils/: __init__.py  friend_registration.py  implicit.py  introspection.py  validation.py
bouncer_access_control.egg-info/: PKG-INFO  SOURCES.txt
decorators/: base.py
descriptors/: base.py  class_method.py  factory.py  method.py
limen/: __init__.py
limen/access/: checker.py  friendship.py
limen/core/: __init__.py  enums.py  protocols.py  value_objects.py
limen/decorators/: base.py  friend_decorator.py
limen/descriptors/: base.py  class_method.py  factory.py  method.py  static_method.py
limen/exceptions/: __init__.py  access_errors.py  limen_errors.py  message_generators.py  method_utils.py
limen/inspection/: stack_inspector.py
limen/system/: management.py
limen/utils/: debug.py  descriptors.py  implicit.py  validation.py
pylimen.egg-info/: PKG-INFO
system/: access_control.py  event_emitter.py
tests/: conftest.py  test_base_implicit.py  test_boundary_conditions.py  test_compositional_decorators.py  test_cpp_access_semantics.py  test_cpp_inheritance.py  test_decorator_fix.py  test_decorator_usage.py  test_decorator_usage_validation.py  test_edge_cases.py  test_final_implicit.py  test_friend_access_modifiers.py  test_friend_methods.py  test_friend_relationships.py  test_implicit.py  test_implicit_inheritance.py  test_implicit_with_inheritance.py  test_inheritance_access_control_bugs.py  test_inheritance_examples.py  test_inheritance_internal_access.py  test_inheritance_semantics.py  test_invalid_decorators.py  test_malicious_attacks.py  test_name_mangling_bypass_prevention.py  test_performance_stress.py  test_property_setter_and_conflicts.py  test_readme_examples.py  test_readme_multiple_inheritance.py  test_refactored.py  test_security_attacks.py
